crates/kirin-derive-prettyless/src/snapshots/kirin_derive_prettyless__generate__tests__render_dispatch_two_variants.snap
---
source: crates/kirin-derive-prettyless/src/generate.rs
expression: generate_render_stage_code(input)
---
impl ::kirin::pretty::RenderDispatch for Stage {
    fn render_staged_function(
        &self,
        sf: kirin_ir::StagedFunction,
        config: &::kirin::pretty::Config,
        global_symbols: &kirin_ir::InternTable<String, kirin_ir::GlobalSymbol>,
    ) -> Result<Option<String>, std::fmt::Error> {
        match self {
            Stage::Source(s) => ::kirin::pretty::RenderDispatch::render_staged_function(
                s,
                sf,
                config,
                global_symbols,
            ),
            Stage::Lowered(s) => ::kirin::pretty::RenderDispatch::render_staged_function(
                s,
                sf,
                config,
                global_symbols,
            ),
        }
    }
}
