crates/kirin-derive-prettyless/src/snapshots/kirin_derive_prettyless__generate__tests__render_stage_single_variant.snap
---
source: crates/kirin-derive-prettyless/src/generate.rs
expression: generate_render_stage_code(input)
---
impl ::kirin::pretty::RenderStage for SimpleStage {
    fn render_staged_function(
        &self,
        sf: kirin_ir::StagedFunction,
        config: &::kirin::pretty::Config,
        global_symbols: &kirin_ir::InternTable<String, kirin_ir::GlobalSymbol>,
    ) -> Result<Option<String>, std::fmt::Error> {
        match self {
            SimpleStage::Main(s) => {
                ::kirin::pretty::RenderStage::render_staged_function(s, sf, config, global_symbols)
            }
        }
    }
}
